Remover duplicados antes de entrenar

--- a/2_Modelos_Clasicos.ipynb
+++ b/2_Modelos_Clasicos.ipynb
@@ -88,7 +88,10 @@
    "outputs": [],
    "source": [
     "# Todo en lower, Html parser, Borrar corchetes, Borrar urls, Borrar stopwords\n",
-    "df['text'] = df['text'].apply(denoise_text)"
+    "df['text'] = df['text'].apply(denoise_text)\n",
+    "\n",
+    "# Remover duplicados\n",
+    "df = removeDuplicates(df, ['text', 'category'])"
    ]
   },
   {
