--- a/5_Red_Neuronal_Fully_Connected_con_Limpieza.ipynb
+++ b/5_Red_Neuronal_Fully_Connected_con_Limpieza.ipynb
@@ -589,9 +589,10 @@
     }
    ],
    "source": [
-    "# Mezclamos los 2 dataframes y los ramdomisamos el orden\n",
+    "# Mezclamos los 2 dataframes y los ramdomizamos el orden\n",
     "news = real.append(fake, ignore_index=True)\n",
     "news = shuffle(news)\n",
+    "\n",
     "news"
    ]
   },
@@ -848,6 +849,10 @@
    "source": [
     "#Combinamos columnas de texto\n",
     "news['text'] = news['title'] + \" \" + news['text']\n",
+    "\n",
+    "# Remover duplicados\n",
+    "news = removeDuplicates(news)\n",
+    "\n",
     "news.drop(['title', 'subject', 'date'], axis=1, inplace=True)\n",
     "news.sample(5)"
    ]
