--- a/4_Red_Neuronal_Fully_Connected.ipynb
+++ b/4_Red_Neuronal_Fully_Connected.ipynb
@@ -420,6 +420,10 @@
    "source": [
     "#Combinamos columnas de texto\n",
     "news['text'] = news['title'] + \" \" + news['text']\n",
+    "\n",
+    "# Remover duplicados\n",
+    "news = removeDuplicates(news)\n",
+    "\n",
     "news.drop(['title', 'subject', 'date'], axis=1, inplace=True)\n",
     "news.sample(5)"
    ]
@@ -890,7 +894,7 @@
           0.0026940603274852037,
           0.0008246704819612205,
           0.000219470210140571,
-          5.3501960792345926e-05
+          0.000053501960792345926
          ],
          "yaxis": "y"
         },
